# server/src/module/cms/special/special.module.ts
@@ -4,9 +4,10 @@ import { SpecialService } from './special.service';
 import { SpecialController } from './special.controller';
 import { SpecialEntity } from './entities/special.entity';
 import { SpecialArticleEntity } from './entities/special-article.entity';
+import { ArticleEntity } from '../article/entities/article.entity';
 
 @Module({
-  imports: [TypeOrmModule.forFeature([SpecialEntity, SpecialArticleEntity])],
+  imports: [TypeOrmModule.forFeature([SpecialEntity, SpecialArticleEntity, ArticleEntity])],
   controllers: [SpecialController],
   providers: [SpecialService],
   exports: [SpecialService],
